# AI-Hiring-Platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mcp_requirements.txt  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/adapters/: __init__.py  batch_processor.py  chroma_http_store.py  cohere_reranker.py  gemini_extractor.py  gemini_vector_store.py  in_memory_job_repo.py  langchain_loader.py  langgraph_pipeline.py  openai_extractor.py  openai_vector_store.py  retrieval_pipeline.py  section_chunker.py
src/domain/: config.py  entities.py  pipeline_state.py
src/drivers/: cli.py  config.py
src/drivers/api/: app.py  dependencies.py  dependencies_back.py  job_runner.py  schemas.py
src/drivers/api/routes/: batch.py  candidates.py  jobs.py  resumes.py  search.py
src/ports/: __init__.py  chuncker.py  document_loader.py  job_repository.py  llm_extractor.py  reranker.py  vector_store.py
